--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,14 @@
 ---
 title: "Natalie Roston"
 image: profile.jpeg
+toc: false
+about: 
+  template: jolla
+  image-shape: round
+  image-width: 17em
+  links:
+    - text: Github Repo for this site
+      href: https://github.com/natbk23/nataliesite
 ---
 
 I am passionate about creating user-centric experiences and products that solve real-world problems. With a focus on empathy, I have worked on a variety of collaborative projects that have allowed me to continuously expand the boundaries of my heuristics. I invite you to explore some of my work in the "projects" tab and see how I have applied my skills to create impactful designs.
