--- a/TidyTuesday2.qmd
+++ b/TidyTuesday2.qmd
@@ -8,23 +8,23 @@ format: html
 ---
 
 ```{r}
-install.packages("tidytuesdayR")
-tuesdata <- tidytuesdayR::tt_load('2024-02-06')
-heritage <- tuesdata$heritage
-
-library(tidyverse)
-data_long <- heritage %>%
-+     pivot_longer(cols = c(`2004`, `2022`), names_to = "year", values_to = "value")
-
-library(ggplot2)
-ggplot(data_long, aes(x = year, y = value, color = country, group = country)) +
-+     geom_line(size = 1) +
-+     geom_point(size = 3) +
-+     labs(title = "Country Values in 2004 and 2022",
-+          x = "Year",
-+          y = "Value") +
-+     scale_color_manual(values = c("Norway" = "blue", "Denmark" = "red", "Sweden" = "green")) +
-+     theme_minimal()
+# install.packages("tidytuesdayR")
+# tuesdata <- tidytuesdayR::tt_load('2024-02-06')
+# heritage <- tuesdata$heritage
+# 
+# library(tidyverse)
+# data_long <- heritage %>%
+# +     pivot_longer(cols = c(`2004`, `2022`), names_to = "year", values_to = "value")
+# 
+# library(ggplot2)
+# ggplot(data_long, aes(x = year, y = value, color = country, group = country)) +
+# +     geom_line(size = 1) +
+# +     geom_point(size = 3) +
+# +     labs(title = "Country Values in 2004 and 2022",
+# +          x = "Year",
+# +          y = "Value") +
+# +     scale_color_manual(values = c("Norway" = "blue", "Denmark" = "red", "Sweden" = "green")) +
+# +     theme_minimal()
 ```
 
 Sources:
