--- a/TidyTuesday1.qmd
+++ b/TidyTuesday1.qmd
@@ -1,13 +1,40 @@
 ---
-title: "College Financial Data"
+title: "Refugees"
 description: |
-  Analysis of student income data from TidyTuesday
+  Analysis of refugee data from TidyTuesday
 author: Natalie Roston
 date: September 18, 2024
 format: html
 ---
 
-```         
+```{{r}}
+library(dplyr)
+install.packages("tidytuesdayR")
+tuesdata <- tidytuesdayR::tt_load('2023-08-22')
+population <- tuesdata$population
+desired_variables <- population %>%
++     select(year, coa_name, refugees, asylum_seekers)
+germany_data <- desired_variables %>%
++     filter(coa_name == "Germany")
+summary_germany <- germany_data %>%
++     group_by(year) %>%
++     summarize(
++         total_refugees = sum(refugees, na.rm = TRUE),
++         total_asylum_seekers = sum(asylum_seekers, na.rm = TRUE),
++         .groups = 'drop'
++     )
+
+library(ggplot2)
+ggplot(summary_germany, aes(x = year)) +
++     geom_line(aes(y = total_refugees, color = "Refugees"), size = 1) +
++     geom_line(aes(y = total_asylum_seekers, color = "Asylum Seekers"), size = 1) +
++     labs(
++         title = "Total Refugees and Asylum Seekers in Germany by Year",
++         x = "Year",
++         y = "Count",
++         color = "Legend"
++     ) +
++     theme_minimal()
 ```
 
 Sources:
