--- a/TidyTuesday1.qmd
+++ b/TidyTuesday1.qmd
@@ -15,12 +15,12 @@ library(dplyr)
 
 tuesdata <- tidytuesdayR::tt_load('2023-08-22')
 population <- tuesdata$population
-desired_variables <- population %>%
+desired_variables <- population |>
      select(year, coa_name, refugees, asylum_seekers)
-germany_data <- desired_variables %>%
+germany_data <- desired_variables |>
      filter(coa_name == "Germany")
-summary_germany <- germany_data %>%
-     group_by(year) %>%
+summary_germany <- germany_data |>
+     group_by(year) |>
      summarize(
          total_refugees = sum(refugees, na.rm = TRUE),
          total_asylum_seekers = sum(asylum_seekers, na.rm = TRUE),
