--- a/Project 2.qmd
+++ b/Project 2.qmd
@@ -33,11 +33,20 @@ These graphs convey the number of movies and TV shows for each rating.
 
 ```{r}
 clean_genres <- str_remove_all(netflix$listed_in, ",.*") 
-print(clean_genres)
 
 ```
+
+This function eliminates the cross-listing of genres to make for an easier analysis.
 
 ```{r}
-
+sum(str_detect(netflix$country, "Singapore|China|India|South Korea|Indonesia|Japan|Taiwan|Philippines") & !is.na(netflix$country))
 
 ```
+
+I am curious how much Netflix content comes from Asian production. str_detect lets us know that 1877 of the shows and movies on Netflix are from Asia.
+
+Sources:
+
+This dataset consists of tv shows and movies available on Netflix as of 2019. The dataset is collected from Flixable which is a third-party Netflix search engine.
+
+It was found on the TidyTuesday github; <https://github.com/rfordatascience/tidytuesday/tree/master/data/2021/2021-04-20>
