--- a/HCDexperience.qmd
+++ b/HCDexperience.qmd
@@ -1,5 +1,5 @@
 ---
-title: "HCD Experience"
+title: "Human-Centered Experience Design"
 description: |
   This two-month long design project was prompted by the Pomona College Community Center's opening in Downtown Pomona. In teams, we were tasked with designing an experiential product that would meaningfully contribute to the neighborhood while bridging a healthy relationship between the two very different communities of Pomona College and Pomona City.
 author: Natalie Roston
