Fix and include sql_audio.qmd in site

--- a/sql_audio.qmd
+++ b/sql_audio.qmd
@@ -1,7 +1,14 @@
 ---
 title: "WAI Database SQL Query"
+author: Natalie Roston
+date: November 26, 2024
+format: html
+execute:
+  warning: false
+  message: false
 ---
-To replicate the table in Voss (2020), I will be pulling the measurements, PI info, and subject tables from the scidb.smith.edu database. After making sure I understand the data structure, I will turn the Frequency data to a log scale. I will then select and join the relevant data before preparing it for visualization. The above steps are in SQL, but I will use R's ggplot package to produce the visualization.  
+
+To replicate the table in Voss (2020), I will be pulling the measurements, PI info, and subject tables from the scidb.smith.edu database. After making sure I understand the data structure, I will turn the Frequency data to a log scale. I will then select and join the relevant data before preparing it for visualization. The above steps are in SQL, but I will use R's ggplot package to produce the visualization.
 
 ```{r}
 library(RMariaDB)
@@ -37,7 +44,8 @@ SELECT *
 FROM Measurements
 LIMIT 0, 5;
 ```
-*This helped me understand what the data structure of Measurements is.*
+
+*This helped me understand the data structure of Measurements.*
 
 ```{sql}
 #| connection: con_wai
@@ -46,6 +54,7 @@ SELECT *
 FROM PI_Info
 LIMIT 0, 50;
 ```
+
 *This helped me understand what the data structure of PI_Info is.*
 
 ```{sql}
@@ -54,7 +63,8 @@ LIMIT 0, 50;
 SELECT * FROM PI_Info
 WHERE Identifier = "Abur_2014";
 ```
-*I explored the PI_Info data by looking at a particular study using Identifier; Abur (2014).
+
+*I explored the PI_Info data by looking at a particular study using Identifier; Abur (2014).*
 
 ```{sql}
 #| connection: con_wai
@@ -62,6 +72,7 @@ WHERE Identifier = "Abur_2014";
 SELECT * FROM Measurements
 WHERE Identifier = "Abur_2014";
 ```
+
 *I then used the Identifier to explore the corresponding Measurements data.*
 
 ```{sql}
@@ -86,6 +97,7 @@ graph |>
   scale_x_log10()
 
 ```
+
 *This first graph demonstrates the studies represented in Figure 1, created by selecting Identifier, Frequency, and Absorbance. There appears to be a strong positive correlation between Frequency and Mean Absorbance overall, but it differs between the studies.*
 
 ```{sql}
@@ -152,6 +164,7 @@ graph2 |>
   scale_x_log10()
 
 ```
+
 *This second graph is created by joining Measurements with p.Identifier. There again appears to be a strong positive correlation between Frequency and Mean Absorbance overall, but it differs between the studies.*
 
 Question 2:
@@ -161,6 +174,7 @@ Question 2:
 SELECT *
 FROM Subjects
 ```
+
 *I wanted to examine the Subjects dataframe to determine which studies had participants of diverse races.*
 
 ```{sql}
@@ -175,10 +189,10 @@ WHERE m.Identifier = "Rosowski_2012" AND Frequency > 200 AND Frequency < 8000
 GROUP BY Race, Frequency
 ```
 
-
 ```{r}
 head(q2_graph)
 ```
+
 ```{sql}
 #| connection: con_wai
 
@@ -186,6 +200,7 @@ SELECT race, COUNT(*)
 FROM Subjects WHERE Identifier = "Rosowski_2012"
 GROUP BY Race
 ```
+
 *I was curious how many subjects of each race were represented.*
 
 ```{r}
@@ -197,7 +212,7 @@ q2_graph |>
   facet_wrap(~ Race) + 
   scale_x_log10()
 ```
+
 *Because data was identical across races, I used facet_wrap to isolate the graphs by Race. Interestingly, Rosowski (2012) separated "Chinese" from "Asian" and had very little racial diversity overall. The graphs convey that after a strong positive correlation, average absorbance rapidly dropped after Frequency of 3000.*
 
-For Question 1, it was important that I aggregate data for specific studies with Identifier and that I filter within the frequency range of 80000 > Frequency > 200. For Question 2,I wanted to explore the race variable. After determiniing that Rosowski (2012) enrolled multiple race groups, I joined the relevant variables using the "Rosowksi_2021" Identifier. I then graphed the data, grouping by race. 
-
+For Question 1, it was important that I aggregate data for specific studies with Identifier and that I filter within the frequency range of 80000 \> Frequency \> 200. For Question 2,I wanted to explore the race variable. After determiniing that Rosowski (2012) enrolled multiple race groups, I joined the relevant variables using the "Rosowksi_2021" Identifier. I then graphed the data, grouping by race.
