--- a/permutationtest.qmd
+++ b/permutationtest.qmd
@@ -86,9 +86,9 @@ p_value
 
 ```
 
-The position of the observed difference near the tail of the distribution aligns with a p-value of 0.0406, indicating a statistically significant result at the 5% significance level. This means that, under the null hypothesis, there is only a 4.06% chance of observing a difference as extreme as the one in our data set. Consequently, the plot supports the conclusion that there is likely a true difference in box office revenue between action and comedy movies, with genre possibly influencing financial performance. This visualization, therefore, provides both a statistical and a visual basis for concluding that genre may have an impact on box office success.
+The position of the observed difference near the tail of the distribution aligns with a p-value of 0.0386, indicating a statistically significant result. This means that, under the null hypothesis, there is only a 3.86% chance of observing a difference as extreme as the one in the data set. Consequently, the plot supports the conclusion that there is likely a true difference in box office revenue between action and comedy movies, with genre possibly influencing financial performance. This visualization, therefore, provides both a statistical and a visual basis for concluding that genre may have an impact on box office success.
 
-The permutation test and histogram assess whether the observed difference in box office revenue between action and comedy movies (31 million dollars) is statistically significant or likely due to random chance. The histogram shows the null distribution, representing what differences we might expect if genre had no impact. With a p-value of 0.0406, the observed difference is unlikely to have occurred by chance, suggesting a real difference in box office revenue between action and comedy movies in the broader population. This result supports the idea that action movies tend to gross more than comedies on average.
+The permutation test and histogram assess whether the observed difference in box office revenue between action and comedy movies (31 million dollars) is statistically significant or likely due to random chance. The histogram shows the null distribution, representing what differences we might expect if genre had no impact. With a p-value of 0.0386, the observed difference is unlikely to have occurred by chance, suggesting a real difference in box office revenue between action and comedy movies in the broader population. This result supports the idea that action movies tend to gross more than comedies on average.
 
 Source:
 
